# AI-Event-Monitoring

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  aievents.py  aievents_app.py  aisarevents.py  environment.yaml  genindex.html  index.html  inference.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: insar_eventnet.architectures.doctree  insar_eventnet.doctree  modules.doctree
.doctrees/user/: cli.doctree  inferenceapi.doctree  installation.doctree  library.doctree  models.doctree
.doctrees/user/notebooks/: evaluate_model.doctree  generate_masks.doctree  generate_masks_time_series.doctree  model_creation.doctree
.github/workflows/: black.yml  distribution.yml  dockerize-and-push.yml  documentation.yml  isort.yml
_modules/: index.html
_modules/insar_eventnet/: etc.html  gui.html  inference.html  io.html  processing.html  sarsim.html
_modules/insar_eventnet/architectures/: eventnet.html  resnet.html  resnet_classifier.html  unet.html  unet3d.html
_sources/api/: modules.rst.txt
_sources/user/: inferenceapi.rst.txt
api/: insar_eventnet.architectures.html  insar_eventnet.html  modules.html
docs/: conf.py  index.rst
docs/api/: insar_eventnet.architectures.rst  insar_eventnet.rst  src.architectures.rst  src.rst
docs/user/: cli.rst  gettingstarted.rst  inferenceapi.rst  installation.rst  library.rst  models.rst
examples/: README.md  cloud_inference.py  generate_simulated_dataset.py  hyp3.py  infer_mask.py  plot_simulated_event.py  show_product.py  train_model.py
insar_eventnet/: aievents.py  config.py  etc.py  gui.py  hyp3.py  inference.py  io.py  processing.py  sagemaker.py  sarsim.py  synthetic_interferogram.py  training.py
insar_eventnet/architectures/: eventnet.py  resnet.py  resnet_classifier.py  unet.py  unet3d.py
notebooks/: README.md  View TIFs.ipynb  download_models_and_data.ipynb  download_url_from_sarviews_api.ipynb  evaluate_model.ipynb  generate_masks.ipynb  generate_masks_time_series.ipynb  model_creation.ipynb  simulated_deformation.ipynb  snaphu.ipynb  test_masking.ipynb  time_series_predictions.ipynb
src/: config.py  etc.py  gui.py  hyp3.py  inference.py  io.py  processing.py  sarsim.py  synthetic_interferogram.py  training.py
src/architectures/: eventnet.py  resnet.py  resnet_classifier.py  unet.py  unet3d.py
tests/: test_io.py  test_processing.py  test_synthetic_interferogram.py
user/: cli.html  inferenceapi.html  installation.html  library.html  models.html
user/notebooks/: evaluate_model.html  generate_masks.html  generate_masks_time_series.html  generate_masks_time_series.ipynb  model_creation.html
(+8 files in other folders)
