[project]
name = "insar-eventnet"
version = "0.0.1"
description = "A deep learning model that can recognize and mask significant deformation events in InSAR interferograms."
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "tensorflow",
    "numpy",
    "geopy",
    "matplotlib",
    "scipy",
    "click",
    "astropy",
    "gdal",
    "flask",
    "perlin-numpy@git+https://github.com/pvigier/perlin-numpy#egg=5e26837db14042e51166eb6cad4c0df2c1907016"
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]
[project.urls]
"Homepage" = "https://github.com/asfadmin/AI-Event-Monitoring/tree/main"
[project.scripts]
insar-eventnet = "insar_eventnet.aievents:cli"
[tool.setuptools]
packages = ["insar_eventnet"]